Support building and running XBMC without RAR support.
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/gpl-compat@26418 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/FileSystem/Makefile.in
+++ b/xbmc/FileSystem/Makefile.in
@@ -32,7 +32,6 @@ SRCS=ASAPFileDirectory.cpp \
      FileISO.cpp \
      FileLastFM.cpp \
      FileMusicDatabase.cpp \
-     FileRar.cpp \
      FileRTV.cpp \
      FileShoutcast.cpp \
      FileSpecialProtocol.cpp \
@@ -62,8 +61,6 @@ SRCS=ASAPFileDirectory.cpp \
      PlaylistDirectory.cpp \
      PlaylistFileDirectory.cpp \
      PluginDirectory.cpp \
-     RarDirectory.cpp \
-     RarManager.cpp \
      RSSDirectory.cpp \
      RTVDirectory.cpp \
      SAPDirectory.cpp \
@@ -86,6 +83,12 @@ SRCS=ASAPFileDirectory.cpp \
      ZeroconfDirectory.cpp \
      ZipDirectory.cpp \
      ZipManager.cpp
+
+ifeq (@HAVE_XBMC_NONFREE@,1)
+SRCS+=RarDirectory.cpp \
+      RarManager.cpp \
+      FileRar.cpp
+endif
 
 INCLUDES+=-I../lib/libUPnP/Platinum/Source/Core \
           -I../lib/libUPnP/Platinum/Source/Platinum \
