--- a/xbmc/lib/libPython/linux/Makefile.in
+++ b/xbmc/lib/libPython/linux/Makefile.in
@@ -56,7 +56,7 @@ PY+=$(foreach DIR, $(PYDIRS), $(wildcard ../Python/Lib/$(DIR)/*.py))
 PY+=$(foreach DIR, $(PYDIRS), $(wildcard ../Python/Lib/$(DIR)/*/*.py))
 PY+=$(foreach DIR, $(PYDIRS), $(wildcard ../Python/Lib/$(DIR)/*/*/*.py))
 PYC=$(addsuffix c, $(PY))
-#PYO=$(addsuffix o, $(PY))
+PYO=$(addsuffix o, $(PY))
 
 .PHONY: compile
 
@@ -66,7 +66,7 @@ all: $(SLIB)
 $(SLIB): $(PYWRAP) ../Python/libpython2.6.a $(PYO) ../../../../tools/Mach5/wrapper.rb
 	rm -rf $(SYSDIR)/Lib
 	rsync -a --exclude '.svn' -t ../Python/build/$(PYLIBDIR)/*.so $(SYSDIR)/Lib
-	rsync -a --exclude '.svn' -t ../Python/Lib/*.py $(SYSDIR)/Lib
+	rsync -a --exclude '.svn' -t ../Python/Lib/*.{py,pyo} $(SYSDIR)/Lib
 	for dirs in $(PYDIRS); do rsync -a --exclude 'test*'  --exclude '.svn' ../Python/Lib/$$dirs $(SYSDIR)/Lib; done
 	(mkdir -p tmp && rm -rf tmp/*)
 	(cd ./tmp && ar x ../../Python/libpython2.6.a)
