Changed all references of Broadcast into Announcement because the new announcement services aren't broadcast, they are per client and filtered
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/jsonrpc@26498 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/utils/Makefile
+++ b/xbmc/utils/Makefile
@@ -61,7 +61,7 @@ SRCS=AlarmClock.cpp \
      PasswordManager.cpp \
      AliasShortcutUtils.cpp \
      WebServer.cpp \
-     BroadcastManager.cpp
+     AnnouncementManager.cpp
 
 LIB=utils.a
 
