[XBOX] merged: mainline/trunk revisions 25940,25775,26207,26216,26217,26223,26273,26274,26276,26279,26280,26291 26293-26300,26329,26330,26331,26332,26340,26343,26344,26347,26362-26365 26367,26380,26392-26394,26419-26421,26426-26429,26444,26447,26455,26458 26465,26470,26472,26480,26481,26514-26516,26519,26521,26522,26531,26533
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/xbox@26545 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc.vcproj
+++ b/xbmc.vcproj
@@ -1570,6 +1570,12 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 					RelativePath=".\xbmc\FileSystem\DAAPDirectory.h">
 				</File>
 				<File
+					RelativePath=".\xbmc\FileSystem\DAVDirectory.cpp">
+				</File>
+				<File
+					RelativePath=".\xbmc\FileSystem\DAVDirectory.h">
+				</File>
+				<File
 					RelativePath=".\xbmc\FileSystem\Directory.cpp">
 				</File>
 				<File
