Added a POC webinterface for the jsonrpc since asp is nolonger available.
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/jsonrpc@26599 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/Makefile.in
+++ b/Makefile.in
@@ -495,7 +495,7 @@ install-livedatas:
 
 install-web:
 	@mkdir -p $(prefix)/share/xbmc/web
-	@cp -r web/Project_Mayhem_III/* $(prefix)/share/xbmc/web
+	@cp -r web/POC\ JSONRPC/* $(prefix)/share/xbmc/web
 	@find $(prefix)/share/xbmc/web -depth -name .svn -exec rm -rf {} \;
 
 uninstall:
