changed: moved all addons.xml loading from CSettings to CAddonMgr added: CAddonsDirectory: addons:// directory protocol. tree structure of currently installed addons. format is addons://{addontype}:{contenttype (if applicable}/UUID changed: confluence, browsing for addons uses the CAddonsDirectory protocol now. skins call Skin.SetFile,{addontype},{contenttype} changed: CAddonMgr::{Load|SAve}AddonsXML shouuld no be public. GetAddons(..) should determine when to load and save addons.xml and when to parse the addon directories changed: IAddon.h removed duplicate SCRIPTS enum value changed: CGUIDialogAddonBrowser -renamed method to make more sense
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/addons-fwork@26646 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/FileSystem/Makefile
+++ b/xbmc/FileSystem/Makefile
@@ -3,7 +3,8 @@ INCLUDES+=-I../lib/libcdio/libcdio/include
 
 CXXFLAGS+=-D__STDC_FORMAT_MACROS \
 
-SRCS=ASAPFileDirectory.cpp \
+SRCS=AddonsDirectory.cpp \
+     ASAPFileDirectory.cpp \
      CacheMemBuffer.cpp \
      CacheStrategy.cpp \
      CDDADirectory.cpp \
