added: convolution shader in glsl with bicubic, lanczos2 and lanczos3 kernels
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@26694 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/cores/VideoRenderers/VideoShaders/Makefile
+++ b/xbmc/cores/VideoRenderers/VideoShaders/Makefile
@@ -1,5 +1,5 @@
 INCLUDES=-I. -I.. -I../../ -I../../../ -I../../../linux -I../../../../guilib
-SRCS=YUV2RGBShader.cpp VideoFilterShader.cpp
+SRCS=YUV2RGBShader.cpp VideoFilterShader.cpp ConvolutionKernels.cpp
 
 LIB=VideoShaders.a
 
