--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -1812,6 +1812,14 @@
 						RelativePath="..\..\xbmc\cores\DllLoader\exports\exports_python_win32.cpp"
 						>
 					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\DllLoader\exports\win32-dirent.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\DllLoader\exports\win32-dirent.h"
+						>
+					</File>
 					<Filter
 						Name="emu_socket"
 						>
