[osx] fixed, failed command-line make from r26847
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@26901 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/Makefile.in
+++ b/Makefile.in
@@ -407,8 +407,8 @@ DYNOBJSXBMC= \
 ifeq ($(findstring osx,$(ARCH)), osx)
 OBJSXBMC += \
 	xbmc/osx/osx.a \
-	xbmc/lib/libSDL-OSX/libSDL-@ARCH@.a \
-	xbmc/lib/libSDL-OSX/libSDL_mixer-@ARCH@.a
+	lib/libSDL-OSX/libSDL-@ARCH@.a \
+	lib/libSDL-OSX/libSDL_mixer-@ARCH@.a
 endif
 
 xbmc.bin: $(OBJSXBMC) $(DYNOBJSXBMC)
