--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -2065,6 +2065,14 @@
 					Name="Shaders"
 					>
 					<File
+						RelativePath="..\..\xbmc\cores\VideoRenderers\VideoShaders\ConvolutionKernels.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\VideoRenderers\VideoShaders\ConvolutionKernels.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\xbmc\cores\VideoRenderers\VideoShaders\VideoFilterShader.cpp"
 						>
 					</File>
