changed: updated build files for Media Portal TV Server, see Ticket #8525
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@26914 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/pvrclients/MediaPortal/project/VS2008Express/XBMC_MPTV.vcproj
+++ b/xbmc/pvrclients/MediaPortal/project/VS2008Express/XBMC_MPTV.vcproj
@@ -68,7 +68,7 @@
 				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../../../../../addons/pvr/MediaPortal/XBMC_MPTV_win32.pvr"
 				LinkIncremental="2"
-				IgnoreDefaultLibraryNames="libc;libcmtd;msvcprt"
+				IgnoreDefaultLibraryNames="libc;libcmtd;msvcprtd"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/XBMC_MPTV.pdb"
 				SubSystem="2"
