fixed: build on linux
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@26915 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/FileSystem/Makefile.in
+++ b/xbmc/FileSystem/Makefile.in
@@ -68,6 +68,8 @@ SRCS=ASAPFileDirectory.cpp \
      PlaylistDirectory.cpp \
      PlaylistFileDirectory.cpp \
      PluginDirectory.cpp \
+     PVRFile.cpp \
+     PVRDirectory.cpp \
      RarDirectory.cpp \
      RarManager.cpp \
      RSSDirectory.cpp \
