changed: Refactored the static item handling in containers to their own class
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@26934 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/guilib/Makefile
+++ b/guilib/Makefile
@@ -43,6 +43,7 @@ SRCS=AnimatedGif.cpp \
      GUISpinControl.cpp \
      GUISpinControlEx.cpp \
      GUIStandardWindow.cpp \
+     GUIStaticItem.cpp \
      GUITextBox.cpp \
      GUITexture.cpp \
      GUITextureGL.cpp \
