--- a/trunk/xbmc/lib/libPython/linux/Makefile.in
+++ b/trunk/xbmc/lib/libPython/linux/Makefile.in
@@ -30,7 +30,11 @@ else
 ifeq ($(ARCH), x86_64-linux)
 	PYLIBDIR=lib.linux-x86_64-2.4
 else
+ifeq ($(ARCH), arm)
+    PYLIBDIR=lib.linux-armv5tel-2.4
+else
 	PYLIBDIR=lib.linux-i686-2.4
+endif
 endif
 endif
 endif
