Renamed FileActions and PlayerActions to FileOperations and PlayerOperations
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/jsonrpc@27079 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/lib/libjsonrpc/Makefile.in
+++ b/xbmc/lib/libjsonrpc/Makefile.in
@@ -1,6 +1,6 @@
 INCLUDES=-I. -I../ -I../../ -I../../../ -I../../utils -I../../FileSystem -I../../linux -I../../cores -I../../../guilib
 
-SRCS=JSONRPC.cpp PlayerActions.cpp SlideshowOperations.cpp PlaylistOperations.cpp FileActions.cpp MusicLibrary.cpp VideoLibrary.cpp FileItemHandler.cpp SystemOperations.cpp XBMCOperations.cpp TCPServer.cpp
+SRCS=JSONRPC.cpp PlayerOperations.cpp SlideshowOperations.cpp PlaylistOperations.cpp FileOperations.cpp MusicLibrary.cpp VideoLibrary.cpp FileItemHandler.cpp SystemOperations.cpp XBMCOperations.cpp TCPServer.cpp
 
 LIB= libjsonrpc.a
 
