revert: removal of XBMSP filesystem
If there is a licence problem with this it should just be made nonfree. It was even made for xbmc to start with. And i really think it should be possible to relicence.

git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@27084 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/FileSystem/Makefile.in
+++ b/xbmc/FileSystem/Makefile.in
@@ -42,6 +42,7 @@ SRCS=ASAPFileDirectory.cpp \
      FileSpecialProtocol.cpp \
      FileSmb.cpp \
      FileTuxBox.cpp \
+     FileXBMSP.cpp \
      FileZip.cpp \
      FTPDirectory.cpp \
      FTPParse.cpp \
@@ -85,6 +86,7 @@ SRCS=ASAPFileDirectory.cpp \
      VTPDirectory.cpp \
      VTPSession.cpp \
      VTPFile.cpp \
+     XBMSDirectory.cpp \
      ZeroconfDirectory.cpp \
      ZipDirectory.cpp \
      ZipManager.cpp
