changed, cpp to c file so I can use it in other c code
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@27097 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/utils/Makefile
+++ b/xbmc/utils/Makefile
@@ -57,7 +57,7 @@ SRCS=AlarmClock.cpp \
      TimeUtils.cpp \
      JobManager.cpp \
      Teletext.cpp \
-     fastmemcpy.cpp \
+     fastmemcpy.c \
      PasswordManager.cpp \
      AliasShortcutUtils.cpp \
      RingBuffer.cpp \
