changed, 1) switch to xine based bit-to-byte stream handling, 2) simplify drop handling
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@27098 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/cores/dvdplayer/DVDCodecs/Video/CrystalHD/Makefile.in
+++ b/xbmc/cores/dvdplayer/DVDCodecs/Video/CrystalHD/Makefile.in
@@ -7,7 +7,13 @@ INCLUDES=-I$(abs_top_srcdir) \
 	 -I$(abs_top_srcdir)/xbmc/cores/dvdplayer \
 	 -I$(abs_top_srcdir)/xbmc/cores/dvdplayer/DVDCodecs/Video \
 
+CFLAGS+= -DNOVDPAU
+CXXFLAGS+= -DNOVDPAU
+
 SRCS=	CrystalHD.cpp \
+	h264_parser.c \
+	cpb.c \
+	nal.c
 
 LIB= CrystalHD.a
 
