Restore XBMC build with external ffmpeg. We'll now only include paths to internal ffmpeg header when building with internal ffmpeg.
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@27099 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/guilib/Makefile.in
+++ b/guilib/Makefile.in
@@ -1,4 +1,7 @@
-INCLUDES=-I. -I../ -Icommon -I../xbmc -I../xbmc/cores/dvdplayer/Codecs/ffmpeg -I../xbmc/linux -I../xbmc/utils -I/usr/include/freetype2 -I/usr/include/SDL -I../xbmc/lib/libsquish
+INCLUDES=-I. -I../ -Icommon -I../xbmc -I../xbmc/linux -I../xbmc/utils -I/usr/include/freetype2 -I/usr/include/SDL -I../xbmc/lib/libsquish
+ifneq (@USE_EXTERNAL_FFMPEG@,1)
+  INCLUDES+=-I../xbmc/cores/dvdplayer/Codecs/ffmpeg
+endif
 
 SRCS=AnimatedGif.cpp \
      AudioContext.cpp \
