--- a/xbmc/cores/dvdplayer/DVDCodecs/Audio/Makefile.in
+++ b/xbmc/cores/dvdplayer/DVDCodecs/Audio/Makefile.in
@@ -1,4 +1,7 @@
-INCLUDES=-I../../../../.. -I. -I../../ -I../../.. -I../../Codecs/ffmpeg -I../../../../ -I../../../../linux -I../../../../../guilib
+INCLUDES=-I../../../../.. -I. -I../../ -I../../.. -I../../../../ -I../../../../linux -I../../../../../guilib
+ifneq (@USE_EXTERNAL_FFMPEG@,1)
+  INCLUDES+=-I../../Codecs/ffmpeg
+endif
 CXXFLAGS+=-DHAVE_MMX
 
 SRCS=	DVDAudioCodecFFmpeg.cpp \
