--- a/xbmc/cores/dvdplayer/Makefile.in
+++ b/xbmc/cores/dvdplayer/Makefile.in
@@ -1,4 +1,7 @@
-INCLUDES=-I../../.. -I. -I.. -I../../ -ICodecs/ffmpeg -I../../linux -I../../utils -I../../../guilib -I../../lib
+INCLUDES=-I../../.. -I. -I.. -I../../ -I../../linux -I../../utils -I../../../guilib -I../../lib
+ifneq (@USE_EXTERNAL_FFMPEG@,1)
+  INCLUDES+=-ICodecs/ffmpeg
+endif
 
 CXXFLAGS+=-D__STDC_FORMAT_MACROS
 
