changed: revert use of openssl's md5 method and use a public domain one instead fixed: use internal pcre for ftp on windows build fixed: windows project fixes to match resent Crystalhd changes and gpl merge
Ps.. Still not linking due to missing modplug library among other things

git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@27110 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/lib/pcre/libpcre/libpcre.vcproj
+++ b/lib/pcre/libpcre/libpcre.vcproj
@@ -235,6 +235,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\pcrecpp.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\pcreposix.c"
 				>
 			</File>
